2009-12-22	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/bin/pfcmd, pf/conf/switches.conf, pf/conf/ui.conf, 
	pf/conf/violations.conf, pf/html/admin/configuration/switches.php, 
	pf/lib/pf/SNMP.pm, pf/lib/pf/pfcmd/pfcmd.pm:
	added fields guestVlan customVlan1 customVlan2 customVlan3 customVlan4 
	customVlan5 as valid vlan definitions in switches.conf

	* pf/bin/pfcmd_vlan:
	- realigned spacing of pod2usage (was broken by tabs)
	- updated copyright, authors
	- new parameter -vlanName
	- using setVlanByName instead of newly deprecated setIsolationVlan and
	  setNormalVlan

	* pf/lib/pf/SNMP.pm: 
	- new sub setVlanByName, sets switch/ifIndex a vlan according to what's
	  defined in switches.conf
	- new sub placeholder for the future: setVlanWithName
	- deprecated setIsolationVlan, setRegistrationVlan, setNormalVlan
	- setVlanAllPort now sets vlan according to # or name based on what the
	  value of vlan is

2009-12-18	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/t/vlan.t, pf/t/data/switches.conf: New vlan.t testsuite that tests
	lib/pf/vlan.pm. Some pretty interesting learning made there, definitely
	more to come on the test front.

	* pf/lib/vlan.pm: Removed several warnings discovered while building a
	vlan test

2009-12-17	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/templates/httpd.conf.apache22, 
	pf/conf/templates/httpd.conf.pre_apache22: pdp.cgi uses mod_perl 
	instead of being a simple cgi. Big performance gain (6x in my tests)

	* pf/packetfence.spec: mod_perl as a packetfence dependency

2009-12-17	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Added perl-LWP-UserAgent-Determined as a 
	dependency of remote-snort-sensor. Fixes #882;
	http://www.packetfence.org/mantis/view.php?id=882

	* pf/packetfence.spec: Added perl-SOAP-Lite as a dependency of 
	remote-snort-sensor. Fixes #881;
	http://www.packetfence.org/mantis/view.php?id=881

2009-12-15	Olivier Bilodeau <obilodeau@inverse.ca>