@@ -14,6 +14,7 @@ runtests( qw(
               binaries.t
               config.t
               critic.t
+              hardware-snmp-objects.t
               pod.t
               podCoverage.t
               php.t
